hphp/hack/test/typecheck/reactive/mutable_override4.php.exp
File "mutable_override4.php", line 10, characters 19-19:
Member f has the wrong type (Typing[4341])
File "mutable_override4.php", line 4, characters 19-19:
Incompatible mutabilities:
File "mutable_override4.php", line 4, characters 19-19:
Receiver of this function is immutable
File "mutable_override4.php", line 10, characters 19-19:
Receiver of this function is mutable
